--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.6",
-    "redux-thunk": "^3.1.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.12"
   },
